--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,18 @@
+body {
+  display: flex;
+}
+.container {
+  display: flex;
+  flex-direction: row;
+}
 h1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-width: 800px;
+  padding: 2rem;
   margin: 0 auto;
-  margin-bottom: 2.5rem;
-  padding: 1rem;
 }
-
 ol {
   display: flex;
   flex-direction: column;
@@ -20,4 +24,10 @@ ol {
 
 li {
   padding: 0.6rem;
+}
+.posters {
+  display: flex;
+  flex-direction: column;
+  width: 100px;
+  margin-left: 10rem;
 }
