--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ h1 {
 }
 
 .container {
-  margin-top: 2.5em;
+  margin-top: 1.5rem;
 }
 
 .posters {
@@ -59,4 +59,11 @@ h1 {
   color: #ffd401;
   transition: 300 all ease-in;
   transform: translateY(0);
+}
+
+.error {
+  font-family: "Courier New", Courier, monospace;
+  text-transform: uppercase;
+  color: #ffd401;
+  font-weight: 800;
 }
