--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,13 @@ h1 {
   color: #ffd401;
   font-weight: 800;
 }
+
+button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 3rem;
+  color: #202b38;
+  background-color: #ffd401;
+}
