--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -6,7 +6,7 @@
 }
 
 .movie__poster {
-  width: 8.5rem;
+  width: 7.2rem;
   padding: 1rem;
   margin: 1rem;
   cursor: pointer;
@@ -23,6 +23,9 @@
   justify-content: center;
   align-items: center;
   max-width: 12.5rem;
-  font-weight: 500;
-  color: #ffd401;
+  font-weight: 800;
+  color: #111111;
+}
+.movie__card {
+  margin-right: 1rem;
 }
