--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,10 @@ h1 {
 }
 
 .container {
+  max-width: 100%;
   margin-top: 1.5rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .genre {
@@ -25,6 +28,7 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 1rem;
 }
 
 .error {
@@ -42,4 +46,8 @@ button {
   margin-left: 3rem;
   color: #202b38;
   background-color: #ffd401;
+}
+
+.btn {
+  cursor: pointer;
 }
