--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -1,31 +1,64 @@
 .movies {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  max-width: 60rem;
+  justify-content: space-around;
+}
+
+.movie__card {
+  width: calc(15% - 2rem);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1rem;
+  border: 1px solid #e3e3e3;
+  box-shadow: 2px 2px 2px 2px #ccc;
+  border-radius: 8px;
+  overflow: hidden;
 }
 
 .movie__poster {
-  width: 7.2rem;
+  width: 100%;
+  border-radius: 8px 8px 0 0;
+}
+
+.movie__info {
   padding: 1rem;
-  margin: 1rem;
-  cursor: pointer;
-  transition: transform 0.3s ease-in-out;
+  width: 100%;
+  text-align: center;
 }
 
-.movie__poster:hover {
-  transform: scale(1.5);
+.movie__info__name {
+  font-weight: 700;
+  color: #000;
+  margin-bottom: 0.5rem;
+  margin-left: 1rem;
+  text-align: start;
+  font-family: sans-serif;
 }
 
-.movie__name {
+.movie__info__date {
+  font-size: 0.875rem;
+  color: #a9a9a9;
+  margin: 0;
+  text-align: start;
+  margin-left: 1rem;
+  font-family: sans-serif;
+}
+
+.movie__info__vote {
+  margin-left: 1.5rem;
+  border: 1px solid black;
+  max-width: 2.5rem;
+  height: 2.5rem;
+  color: white;
+  background-color: #000;
+  border-radius: 100%;
+  text-align: center;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-width: 12.5rem;
-  font-weight: 800;
-  color: #111111;
-}
-.movie__card {
-  margin-right: 1rem;
+  margin-top: -2.5rem;
+  font-family: sans-serif;
+  font-size: 1em;
 }
